--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,14 +1,17 @@
 <html>
-  <head>
-    <title>My New App</title>
-   
-    <link rel="stylesheet" href="stylesheets/main.css">
+<head>
+    <title>{{title}}</title>
+
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
-  <body>
+
+</head>
+<body>
+{{> _navbar}}
 {{{body}}}
-  </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
 </html>
