--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -4,7 +4,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
         <h4 class="alert-heading">Well done!</h4>
-        <p>Aww yeah, you successfully fired up Nodejs Server. This example page is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+        <p>Aww yeah, you successfully started Nodejs Server. This example page is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
         <hr>
         <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
     </div>
